examples/pass/function_with_let_arg.uplp
-- category = "value"
--
-- [metadata]
-- type = "Num"
-- value = 10
let f = |x: Num| x + 9 in
f (let x = 1 in x)