examples/fail/unexpected_eof.uplp
category = "error"

[metadata]
error = "Parse.unexpected_token"

[metadata.expectation]
loc = 9
tok = "eof"
---
let x = 1
